finilized service module
and create module for lookups to use it in create service and create seeders
