# app/Modules/Services/Http/Resources/ServiceResource.php
@@ -1,6 +1,6 @@
 <?php
 
-namespace App\Modules\Customers\Http\Resources;
+namespace App\Modules\Services\Http\Resources;
 
 use Illuminate\Contracts\Support\Arrayable;
 use Illuminate\Http\Request;
@@ -8,19 +8,19 @@ use Illuminate\Http\Resources\Json\JsonResource;
 use JsonSerializable;
 use OpenApi\Annotations as OA;
 
-class CustomerLookupResource extends JsonResource
+class ServiceResource extends JsonResource
 {
     /**
      * @OA\Schema(
-     *     schema="CustomerLockupResource",
+     *     schema="ServiceResource",
      *     type="object",
-     *     @OA\Property(property="type", type="string", example="customer"),
+     *     @OA\Property(property="type", type="string", example="service"),
      *     @OA\Property(property="id", type="integer", example=1),
      *     @OA\Property(
      *         property="attributes",
      *         type="object",
      *         @OA\Property(property="id", type="integer", example=1),
-     *         @OA\Property(property="name", type="string", example="John Doe"),
+     *         @OA\Property(property="name", type="string", example="service"),
      *     )
      * )
      * 
@@ -34,11 +34,11 @@ class CustomerLookupResource extends JsonResource
 
 
         return [
-            'type' => 'customers',
+            'type' => 'service',
             'id' => $this->id,
             'attributes' => [
                 'id' => $this->id,
-                'name'=>$this->first_name . ' ' . $this->last_name,
+                'name' => $this->name,
             ]
         ];
     }
