# app/Modules/Services/config/route.php
@@ -1,0 +1,7 @@
+<?php
+
+return [
+    'prefix' => [
+        'services' => 'services'
+    ]
+];
